--- a/index.html
+++ b/index.html
@@ -342,6 +342,15 @@
           <button type="button" class="skill-filter rounded-full border border-slate-200 bg-white px-3 py-1 text-slate-700" data-skill-filter="web">
             Web
           </button>
+          <button type="button" class="skill-filter rounded-full border border-slate-200 bg-white px-3 py-1 text-slate-700" data-skill-filter="tools">
+            Tools
+          </button>
+          <button type="button" class="skill-filter rounded-full border border-slate-200 bg-white px-3 py-1 text-slate-700" data-skill-filter="stats">
+            Stats
+          </button>
+          <button type="button" class="skill-filter rounded-full border border-slate-200 bg-white px-3 py-1 text-slate-700" data-skill-filter="collab">
+            Collab
+          </button>
         </div>
 
         <div class="mt-4 grid gap-4 md:grid-cols-3">
@@ -363,10 +372,6 @@
               NumPy, Pandas, scikit-learn, XGBoost, PyTorch, TensorFlow, OpenCV, NLTK, spaCy, LangChain, LlamaIndex, LangGraph,
               Hugging Face
             </p>
-          </div>
-          <div class="skill-card glass rounded-2xl p-5" data-skill-category="bi">
-            <h3 class="text-sm font-semibold text-slate-600">BI Tools</h3>
-            <p class="mt-2 text-sm text-slate-700">Tableau, Power BI</p>
           </div>
           <div class="skill-card glass rounded-2xl p-5" data-skill-category="cloud">
             <h3 class="text-sm font-semibold text-slate-600">Cloud</h3>
@@ -398,12 +403,26 @@
             <h3 class="text-sm font-semibold text-slate-600">Deployment / Tracking</h3>
             <p class="mt-2 text-sm text-slate-700">MLflow, Databricks, AWS SageMaker, TensorFlow Serving</p>
           </div>
-          <div class="skill-card glass rounded-2xl p-5" data-skill-category="bigdata">
-            <h3 class="text-sm font-semibold text-slate-600">Other Tools</h3>
-            <p class="mt-2 text-sm text-slate-700">
-              Git, GitHub, Docker, RStudio, Tableau Prep, Jupyter, Anaconda, PyCharm, VS Code, JIRA, Slack, ClickUp, Azure DevOps
-            </p>
+          <div class="skill-card glass rounded-2xl p-5" data-skill-category="tools">
+            <h3 class="text-sm font-semibold text-slate-600">Version Control</h3>
+            <p class="mt-2 text-sm text-slate-700">Git, GitHub</p>
           </div>
+          <div class="skill-card glass rounded-2xl p-5" data-skill-category="stats">
+            <h3 class="text-sm font-semibold text-slate-600">Statistical Analysis</h3>
+            <p class="mt-2 text-sm text-slate-700">Hypothesis testing, Regression analysis, Bayesian statistics, Experimental design</p>
+          </div>
+          <div class="skill-card glass rounded-2xl p-5" data-skill-category="bi">
+            <h3 class="text-sm font-semibold text-slate-600">BI Tools</h3>
+            <p class="mt-2 text-sm text-slate-700">Tableau, Power BI</p>
+          </div>
+          <div class="skill-card glass rounded-2xl p-5" data-skill-category="collab">
+            <h3 class="text-sm font-semibold text-slate-600">Collaboration Tools</h3>
+            <p class="mt-2 text-sm text-slate-700">JIRA, Slack, ClickUp, Azure DevOps</p>
+          </div>
+          <div class="skill-card glass rounded-2xl p-5" data-skill-category="tools">
+            <h3 class="text-sm font-semibold text-slate-600">Other Software / Tools</h3>
+            <p class="mt-2 text-sm text-slate-700">RStudio, Tableau Prep, Jupyter, Anaconda, PyCharm, VS Code, Docker</p>
+          </div>          
         </div>
       </section>
 
