--- a/index.html
+++ b/index.html
@@ -6,139 +6,9 @@
     <meta name="description" content="H.R. Nisal Asanga Waruna | Data Scientist CV" />
     <title>CV | H.R. Nisal Asanga Waruna</title>
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-      tailwind.config = {
-        darkMode: "class",
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: [
-                "ui-sans-serif",
-                "system-ui",
-                "-apple-system",
-                "Segoe UI",
-                "Roboto",
-                "Helvetica",
-                "Arial",
-                "Noto Sans",
-                "Liberation Sans",
-                "sans-serif",
-              ],
-            },
-          },
-        },
-      };
-    </script>
-
-    <style>
-      html {
-        scroll-padding-top: 5.5rem;
-      }
-
-      section[id] {
-        scroll-margin-top: 5.5rem;
-      }
-
-      :root {
-        --bg1: 248 250 252;
-        --bg2: 241 245 249;
-        --card: 255 255 255;
-        --text: 15 23 42;
-        --muted: 71 85 105;
-        --ring: 226 232 240;
-      }
-
-      html.dark {
-        --bg1: 2 6 23;
-        --bg2: 15 23 42;
-        --card: 2 6 23;
-        --text: 226 232 240;
-        --muted: 148 163 184;
-        --ring: 30 41 59;
-      }
-
-      body {
-        background:
-          radial-gradient(1200px 700px at 20% 10%, rgba(56, 189, 248, 0.18), transparent 60%),
-          radial-gradient(900px 600px at 90% 25%, rgba(99, 102, 241, 0.18), transparent 60%),
-          radial-gradient(800px 600px at 40% 95%, rgba(34, 197, 94, 0.14), transparent 55%),
-          linear-gradient(180deg, rgb(var(--bg1)), rgb(var(--bg2)));
-        color: rgb(var(--text));
-      }
-
-      .glass {
-        background: rgba(var(--card), 0.72);
-        border: 1px solid rgba(var(--ring), 0.9);
-        box-shadow: 0 1px 1px rgba(2, 6, 23, 0.06), 0 16px 50px rgba(2, 6, 23, 0.08);
-        backdrop-filter: blur(12px);
-      }
-
-      .reveal {
-        opacity: 0;
-        transform: translateY(12px);
-        transition: opacity 500ms ease, transform 500ms ease;
-      }
-
-      .reveal.is-visible {
-        opacity: 1;
-        transform: translateY(0);
-      }
-
-      .print-only {
-        display: none;
-      }
-
-      @media (prefers-reduced-motion: reduce) {
-        .reveal {
-          opacity: 1;
-          transform: none;
-          transition: none;
-        }
-      }
-
-      @media print {
-        @page {
-          size: A4;
-          margin: 12mm;
-        }
-
-        .no-print {
-          display: none !important;
-        }
-
-        .print-only {
-          display: block !important;
-        }
-
-        body {
-          background: #ffffff !important;
-          color: #0f172a !important;
-        }
-
-        .glass {
-          background: #ffffff !important;
-          border: 1px solid #e2e8f0 !important;
-          box-shadow: none !important;
-          backdrop-filter: none !important;
-        }
-
-        .reveal {
-          opacity: 1 !important;
-          transform: none !important;
-          transition: none !important;
-        }
-
-        .skill-filter,
-        #skillFilterReset {
-          display: none !important;
-        }
-
-        a[href]:after {
-          content: "";
-        }
-      }
-    </style>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="scripts/tailwind-config.js"></script>
+  <link rel="stylesheet" href="styles.css">
   </head>
 
   <body class="text-slate-900">
@@ -526,78 +396,6 @@
       </footer>
     </main>
 
-    <script>
-      document.getElementById("year").textContent = new Date().getFullYear();
-
-      const header = document.getElementById("siteHeader");
-      const setHeaderShadow = () => {
-        if (!header) return;
-        if (window.scrollY > 6) header.classList.add("shadow-lg");
-        else header.classList.remove("shadow-lg");
-      };
-      window.addEventListener("scroll", setHeaderShadow, { passive: true });
-      setHeaderShadow();
-
-      const prefersReduced = window.matchMedia("(prefers-reduced-motion: reduce)").matches;
-      if (!prefersReduced && "IntersectionObserver" in window) {
-        const io = new IntersectionObserver(
-          (entries) => {
-            entries.forEach((e) => {
-              if (e.isIntersecting) {
-                e.target.classList.add("is-visible");
-                io.unobserve(e.target);
-              }
-            });
-          },
-          { threshold: 0.12 }
-        );
-
-        document.querySelectorAll(".reveal").forEach((el) => io.observe(el));
-      } else {
-        document.querySelectorAll(".reveal").forEach((el) => el.classList.add("is-visible"));
-      }
-
-      const activeFilters = new Set();
-      const filterButtons = Array.from(document.querySelectorAll(".skill-filter"));
-      const cards = Array.from(document.querySelectorAll(".skill-card"));
-      const reset = document.getElementById("skillFilterReset");
-
-      function applySkillFilters() {
-        if (activeFilters.size === 0) {
-          cards.forEach((c) => (c.style.display = ""));
-          return;
-        }
-        cards.forEach((c) => {
-          const cat = c.getAttribute("data-skill-category");
-          c.style.display = activeFilters.has(cat) ? "" : "none";
-        });
-      }
-
-      filterButtons.forEach((btn) => {
-        btn.addEventListener("click", () => {
-          const key = btn.getAttribute("data-skill-filter");
-          if (!key) return;
-          if (activeFilters.has(key)) {
-            activeFilters.delete(key);
-            btn.classList.remove("bg-slate-900", "text-white", "border-slate-900");
-            btn.classList.add("bg-white", "text-slate-700", "border-slate-200");
-          } else {
-            activeFilters.add(key);
-            btn.classList.remove("bg-white", "text-slate-700", "border-slate-200");
-            btn.classList.add("bg-slate-900", "text-white", "border-slate-900");
-          }
-          applySkillFilters();
-        });
-      });
-
-      reset?.addEventListener("click", () => {
-        activeFilters.clear();
-        filterButtons.forEach((btn) => {
-          btn.classList.remove("bg-slate-900", "text-white", "border-slate-900");
-          btn.classList.add("bg-white", "text-slate-700", "border-slate-200");
-        });
-        applySkillFilters();
-      });
-    </script>
+  <script src="scripts/script.js"></script>
   </body>
 </html>
